--- a/components/header.html
+++ b/components/header.html
@@ -48,7 +48,7 @@
           >
         </li>
         <li>
-          <a href="/#contact" class="hover:text-theme transition-colors"
+          <a href="/contact.html" class="hover:text-theme transition-colors"
             >Contact Us</a
           >
         </li>
@@ -109,10 +109,10 @@
                 <i class="fas fa-phone mr-2"></i> +880 1577081856
               </a>
               <a
-                href="mailto:info@khinfinity.com"
+                href="mailto:info@khi.com.bd"
                 class="text-white hover:text-theme transition-colors block"
               >
-                <i class="fas fa-envelope mr-2"></i> info@khinfinity.com
+                <i class="fas fa-envelope mr-2"></i> info@khi.com.bd
               </a>
             </div>
 
@@ -145,7 +145,7 @@
       <button
         class="hidden md:block bg-theme text-white px-6 py-2 rounded-lg hover:bg-theme-dark transition-colors"
       >
-        Get In Touch
+        <a href="/contact.html">Get In Touch</a>
       </button>
     </nav>
   </div>
