--- a/components/footer.html
+++ b/components/footer.html
@@ -5,7 +5,7 @@
       <!-- Company Info -->
       <div>
         <img
-          src="/images/logo-white.png"
+          src="/images/brand/official_logo_lite.svg"
           alt="K.H. Infinity"
           class="h-12 mb-6"
         />
